--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "@mui/styles": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
