--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "server": "cd backend && npm run develop"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^18.0.0"
+  }
 }
