--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "emailjs-com": "^3.2.0",
+    "google-maps-react": "^2.0.6",
     "material-paper": "^0.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
