--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "google-maps-react": "^2.0.6",
     "material-paper": "^0.0.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.3.0",
